# simple-hot-reloader

./: .gitignore  CMakeLists.txt  README.md  TODO.md  scene.json
app/: CMakeLists.txt  main.cpp  watch.cpp  watch.hpp  watchFile.cpp  watchFile.hpp  workingThread.cpp  workingThread.hpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  add_warning.cmake  download_file.cmake
lib/: CMakeLists.txt  library.cpp  library.hpp
